--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "validate-env": "tsc ValidateEnv.ts && node ValidateEnv.js \n rm ValidateEnv.js",
+    "prebuild": "rimraf dist",
+    "build": "tsc ValidateEnv.ts && node ValidateEnv.js \n rm ValidateEnv.js && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "tsc ValidateEnv.ts && node ValidateEnv.js \n rm ValidateEnv.js && nest start",
+    "start:dev": "tsc ValidateEnv.ts && node ValidateEnv.js \n rm ValidateEnv.js && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -36,6 +38,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
