--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "validate-env": "tsc ValidateEnv.ts && node ValidateEnv.js \n rm ValidateEnv.js",
+    "validate-env": "tsc ValidateEnv.ts && node ValidateEnv.js ",
     "prebuild": "rimraf dist",
-    "build": "tsc ValidateEnv.ts && node ValidateEnv.js \n rm ValidateEnv.js && nest build",
+    "build": "tsc ValidateEnv.ts && node ValidateEnv.js && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "tsc ValidateEnv.ts && node ValidateEnv.js \n rm ValidateEnv.js && nest start",
-    "start:dev": "tsc ValidateEnv.ts && node ValidateEnv.js \n rm ValidateEnv.js && nest start --watch",
+    "start": "tsc ValidateEnv.ts && node ValidateEnv.js && nest start",
+    "start:dev": "tsc ValidateEnv.ts && node ValidateEnv.js && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
