--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "exclude": [
     "ValidateEnv.ts",
+    "ValidateEnv.js",
     "node_modules",
     "test",
     "dist",
