--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.21",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
